# stock-crypto-data-pipeline-public

./: .cursorignore  .dbterd.yml  .gitignore  .sqlfluff  .sqlfluffignore  LICENSE  README.md  dbt_project.yml  docker-compose.yml  prefect.yaml  pyproject.toml  selectors.yml
.github/workflows/: dbt-ci.yml  local-ci.yml
docker/kafka-consumer/: Dockerfile
docker/kafka-producer/: Dockerfile
docker/postgres/: Dockerfile
docs/: cryptocurrencies.odt  prefect_flows.md  presentation_capstone.odp  steps_by_steps.md
docs/ERD/: ERD_1.sql  Table_Specs.ods
docs/architecture/: Architecture_202510.drawio  Architecture_20251101.drawio
docs/decisions/: decision_log.md
macros/: categorize_news.sql  generate_base_model.sql  hash_key.sql  macro.yml
models/marts/: dim_asset.sql  dim_company.sql  dim_customer.sql  dim_customer_history.sql  fct_asset_news_impact.sql  (+5 more)
profiles/: profiles.yml
prometheus/: prometheus.yml
scripts/: compress_hypertable.sql  s00_test_snowflake_connection.py  s01_minio_block_create.py  s02_prefect_variables_create.py
seeds/: cryptolist.txt  seeds.yml  stocklist.txt  stocks_ticket.py
tests/: README_TESTS.md  test_asset_type_valid.sql  test_customer_history_no_overlaps.sql  test_customer_id_not_null.sql  test_customer_tier_valid.sql  test_email_format_valid.sql  test_news_impact_returns_calculation.sql  test_news_published_date_not_future.sql  test_price_comparison_variance.sql  test_price_data_freshness.sql  test_risk_tolerance_valid.sql  test_scd2_effective_dates.sql  test_stock_price_range_valid.sql  test_transaction_date_consistency.sql  test_transaction_fee_reasonable.sql  test_transaction_type_valid.sql  test_url_format_valid.sql  test_volume_positive.sql  test_week52_price_range_valid.sql  test_year_founded_reasonable.sql
(+82 files in other folders)
